--- a/excel.html
+++ b/excel.html
@@ -404,21 +404,15 @@ document.getElementById("importExcel").addEventListener("change", async (e) => {
   const ws = wb.Sheets[wb.SheetNames[0]];
   const json = XLSX.utils.sheet_to_json(ws, { defval: "" });
 
-  vendasExcel = json.map(r => ({
-  codigo: normalizarCodigo(
-    r.codigo_varejo ||
-    r.CODIGO ||
-    r["Código"] ||
-    r["Cod. Produto"] ||
-    r["Código do Produto"] ||
-    ""
-  ),
-  data: r.data || r.DATA,
-  quantidade: Number(r.quantidade || r.QTD || 0),
-  valor: Number(r.valor_total || r.VALOR || 0)
+vendasExcel = json.map(r => ({
+  codigo: normalizarCodigo(r["Código"] || r.CODIGO || ""),
+  data: r["Data"] || r.DATA || "",               // se existir coluna Data
+  quantidade: Number(r["Quantidade"] || 0),
+  valor: Number(r["Faturamento"] || 0)
 }));
 
 console.table(vendasExcel.slice(0, 10)); // debug
+
 
   localStorage.setItem("vendas_excel", JSON.stringify(vendasExcel));
   alert("📊 Excel de vendas importado com sucesso!");
