--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -381,8 +381,8 @@ button:disabled{opacity:.6;cursor:not-allowed}
   <div id="listaIng"></div>
 
   <div class="kpis">
-    <div class="kpi">CMV TOTAL<span id="cmvTotal">R$ 0,00</span></div>
-    <div class="kpi">CMV UNIT<span id="cmvUnit">R$ 0,00</span></div>
+    <div class="kpi">Custo com igredientes<span id="cmvTotal">R$ 0,00</span></div>
+    <div class="kpi">Custo unitário<span id="cmvUnit">R$ 0,00</span></div>
     <div class="kpi">MARGEM<span id="margem">—</span></div>
   </div>
 
